// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CollectionCard rendering tests description null - test 1`] = `
<div>
  <div
    class="group relative flex flex-col rounded-xl border bg-white p-5 shadow-sm transition-shadow hover:shadow-md"
    data-testid="collection-item-card"
  >
    <div
      class="absolute top-3 right-3 opacity-0 transition-opacity group-hover:opacity-100"
    >
      <div
        data-slot="dropdown-menu"
        data-testid="more-options-btn"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer"
          data-slot="dropdown-menu-trigger"
          data-testid="more-options-trigger-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-dropdown-menu-portal"
        />
      </div>
    </div>
    <a
      class="flex flex-1 flex-col gap-3"
      data-testid="collection-link"
      href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex h-10 w-10 shrink-0 items-center justify-center rounded-lg"
          style="background-color: rgba(100, 116, 139, 0.125);"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-folder h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="color: rgb(100, 116, 139);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
            />
          </svg>
        </div>
        <div
          class="min-w-0"
        >
          <div
            class="flex items-center gap-1.5"
            data-testid="name"
          >
            <span
              class="truncate font-semibold text-slate-900"
            >
              name 1
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-lock h-3.5 w-3.5 shrink-0 text-slate-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="11"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="11"
              />
              <path
                d="M7 11V7a5 5 0 0 1 10 0v4"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mt-auto pt-2"
      >
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
          data-slot="badge"
        >
          10
           
          Vorlagen
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`CollectionCard rendering tests isPublic false - test 1`] = `
<div>
  <div
    class="group relative flex flex-col rounded-xl border bg-white p-5 shadow-sm transition-shadow hover:shadow-md"
    data-testid="collection-item-card"
  >
    <div
      class="absolute top-3 right-3 opacity-0 transition-opacity group-hover:opacity-100"
    >
      <div
        data-slot="dropdown-menu"
        data-testid="more-options-btn"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer"
          data-slot="dropdown-menu-trigger"
          data-testid="more-options-trigger-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-dropdown-menu-portal"
        />
      </div>
    </div>
    <a
      class="flex flex-1 flex-col gap-3"
      data-testid="collection-link"
      href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex h-10 w-10 shrink-0 items-center justify-center rounded-lg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-folder h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
            />
          </svg>
        </div>
        <div
          class="min-w-0"
        >
          <div
            class="flex items-center gap-1.5"
            data-testid="name"
          >
            <span
              class="truncate font-semibold text-slate-900"
            >
              name 1
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-lock h-3.5 w-3.5 shrink-0 text-slate-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="11"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="11"
              />
              <path
                d="M7 11V7a5 5 0 0 1 10 0v4"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="line-clamp-2 text-sm text-slate-500"
      >
        description 1
      </p>
      <div
        class="mt-auto pt-2"
      >
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
          data-slot="badge"
        >
          5
           
          Vorlagen
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`CollectionCard rendering tests isPublic true - test 1`] = `
<div>
  <div
    class="group relative flex flex-col rounded-xl border bg-white p-5 shadow-sm transition-shadow hover:shadow-md"
    data-testid="collection-item-card"
  >
    <div
      class="absolute top-3 right-3 opacity-0 transition-opacity group-hover:opacity-100"
    >
      <div
        data-slot="dropdown-menu"
        data-testid="more-options-btn"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer"
          data-slot="dropdown-menu-trigger"
          data-testid="more-options-trigger-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-dropdown-menu-portal"
        />
      </div>
    </div>
    <a
      class="flex flex-1 flex-col gap-3"
      data-testid="collection-link"
      href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex h-10 w-10 shrink-0 items-center justify-center rounded-lg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-folder h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
            />
          </svg>
        </div>
        <div
          class="min-w-0"
        >
          <div
            class="flex items-center gap-1.5"
            data-testid="name"
          >
            <span
              class="truncate font-semibold text-slate-900"
            >
              name 1
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-globe h-3.5 w-3.5 shrink-0 text-green-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="line-clamp-2 text-sm text-slate-500"
      >
        description 1
      </p>
      <div
        class="mt-auto pt-2"
      >
        <span
          class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs font-normal"
          data-slot="badge"
        >
          1
           
          Vorlage
        </span>
      </div>
    </a>
  </div>
</div>
`;
